# micronis

./: README.md  main.py  makefile  pyproject.toml  semiconartists_model.pth
